@@ -1,12 +1,17 @@
 DIST libksba-0.9.16.tar.bz2 496412 RMD160 ec07c02d032cff3ea0196ac723edfab8dd97f2d9 SHA1 ab24c72d943b3aa7d52d36d35b64399dee3c0c24 SHA256 b0c59b1fc58c8854b3623fa78b67b46c9ad3d5aff70dd6e7b9b1280c0e5be685
+DIST libksba-1.0.0.tar.bz2 502130 RMD160 c2734dae2d4e2dc36a55512271134c79efbae135 SHA1 aefe3f5c7f8d1faedc9497df09123c90a789ffe1 SHA256 e28858988a37bf9a7421e9d727c2ab2f0253e6fe540e4a5df59e6b42b1480763
 EBUILD libksba-0.9.16.ebuild 894 RMD160 c19cea950a2f7b19593528225e93e7f77b2b7fc9 SHA1 d4b94012af4610bdc6b751b9e0dc92a4b139d029 SHA256 5c46fca33516ffa093f69881eed4794694404fc3f674779149232932d4a0679d
 MD5 416e9e1d6ed4d53b9341bf4c58c9c494 libksba-0.9.16.ebuild 894
 RMD160 c19cea950a2f7b19593528225e93e7f77b2b7fc9 libksba-0.9.16.ebuild 894
 SHA256 5c46fca33516ffa093f69881eed4794694404fc3f674779149232932d4a0679d libksba-0.9.16.ebuild 894
-MISC ChangeLog 6885 RMD160 ef08907e00b89283546bed39f4fcee6f1b74c93b SHA1 0522663d4f46abf6399677474bcfe073aabf1535 SHA256 a92170754d56e6a818b25b40915005566b4524f4913d34ce2bcf68b2bc8be8fb
-MD5 112ea326de7450a9a3b6e8b2759d3d67 ChangeLog 6885
-RMD160 ef08907e00b89283546bed39f4fcee6f1b74c93b ChangeLog 6885
-SHA256 a92170754d56e6a818b25b40915005566b4524f4913d34ce2bcf68b2bc8be8fb ChangeLog 6885
+EBUILD libksba-1.0.0.ebuild 886 RMD160 aa09aeeec7b21fd1450a6d9bf824b926fe15a1a2 SHA1 a96572de5c65552e18e66c1818a86fb954ff7773 SHA256 a1b75ef9ab151e884474c41229796d7974079410acc4572682f5a4319ea4759a
+MD5 ecaecde1e5957e1e34859431d1565c90 libksba-1.0.0.ebuild 886
+RMD160 aa09aeeec7b21fd1450a6d9bf824b926fe15a1a2 libksba-1.0.0.ebuild 886
+SHA256 a1b75ef9ab151e884474c41229796d7974079410acc4572682f5a4319ea4759a libksba-1.0.0.ebuild 886
+MISC ChangeLog 7148 RMD160 530adbe1f8c5339941d2c06cf4539fd7d377daab SHA1 4a93172978ee9f9a3aeb3de07e9630a8b9c8054e SHA256 38e95c7b0d07f3293c7e150cfe5e89bfe815ce6c5d5721eef17f6c36505cefd3
+MD5 4b69544633d6863193dbdb5e8b0e429a ChangeLog 7148
+RMD160 530adbe1f8c5339941d2c06cf4539fd7d377daab ChangeLog 7148
+SHA256 38e95c7b0d07f3293c7e150cfe5e89bfe815ce6c5d5721eef17f6c36505cefd3 ChangeLog 7148
 MISC metadata.xml 286 RMD160 c2b5969811571490e2608996feac695e4ffecc42 SHA1 77a701b4c2687cf6c59546f4906e0386061acdc8 SHA256 b6b7dbc1fbeeab10f65ba2033a683592da35c19c25f40edf0d2d2a92cca9d87a
 MD5 09a95314388ecbaa03fbe0dce408227e metadata.xml 286
 RMD160 c2b5969811571490e2608996feac695e4ffecc42 metadata.xml 286
@@ -14,3 +19,6 @@ SHA256 b6b7dbc1fbeeab10f65ba2033a683592da35c19c25f40edf0d2d2a92cca9d87a metadata
 MD5 b240875a40ee83fdd73d159a2ffa1aea files/digest-libksba-0.9.16 247
 RMD160 373f9553dba9e38c2ba551fb7c38696f6f06e177 files/digest-libksba-0.9.16 247
 SHA256 d6a8f17c1f50f8df09feb6aa6bdf2564d5f2534309b206d661544001c17ede4a files/digest-libksba-0.9.16 247
+MD5 9984140d4cf4bf6ea5964919ed2b5f5b files/digest-libksba-1.0.0 244
+RMD160 c51d73a87f926dc9248b26c40c49b7ae11efc473 files/digest-libksba-1.0.0 244
+SHA256 9c345fd1f94933ce9de8c49245a8585bf75430573c74cb3eb264f678ede87dea files/digest-libksba-1.0.0 244
