@@ -1,0 +1,3 @@
+MD5 9b20be3fa55d7e4271344cce92bfa4ca libksba-1.0.0.tar.bz2 502130
+RMD160 c2734dae2d4e2dc36a55512271134c79efbae135 libksba-1.0.0.tar.bz2 502130
+SHA256 e28858988a37bf9a7421e9d727c2ab2f0253e6fe540e4a5df59e6b42b1480763 libksba-1.0.0.tar.bz2 502130
