@@ -1,6 +1,14 @@
 # ChangeLog for dev-libs/libksba
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libksba/ChangeLog,v 1.58 2006/10/02 16:07:34 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libksba/ChangeLog,v 1.60 2006/10/30 18:58:58 alonbl Exp $
+
+  30 Oct 2006; Alon Bar-Lev <alonbl@gentoo.org> libksba-1.0.0.ebuild:
+  Fix libgpg-error dependency, thanks to Matthias Bethke, closes bug#153429
+
+*libksba-1.0.0 (29 Oct 2006)
+
+  29 Oct 2006; Alon Bar-Lev <alonbl@gentoo.org> +libksba-1.0.0.ebuild:
+  Version bump
 
   02 Oct 2006; Fabian Groffen <grobian@gentoo.org> libksba-0.9.14.ebuild,
   libksba-0.9.15.ebuild, libksba-0.9.16.ebuild:
